--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oreidasbetoneiras",
+  "name": "4096",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.33.2",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^6.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
