--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,26 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": [
+        "./src/*"
+      ],
+      "@img/*": [
+        "./public/images"
+      ],
+      "@fonts/*": [
+        "./public/fonts"
+      ],
+      "@styles/*": [
+        "./public/styles"
+      ],
+      "@components/*": [
+        "./src/components"
+      ],
+      "@utils/*": [
+        "./src/utils"
+      ]
+    },
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".next/types/**/*.tsx"],
   "exclude": ["node_modules"]
 }
